fixing gap issues

--- a/positionstyles.css
+++ b/positionstyles.css
@@ -73,8 +73,9 @@ gap: 20px;
   /* This is the parent of the activity 3 boxes. */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 100px 200px 100px;
+  grid-template-rows: 100px 100px 100px;
   grid-column-gap: 50px;
+  grid-row-gap: 0;
 
 }
 .red3 {
